--- a/portfolio_api/api/templates/email_template.html
+++ b/portfolio_api/api/templates/email_template.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Your Email Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thanks!</title>
 </head>
-<body>
-    <h1>Hello!</h1>
-    <p>This is an HTML email example.</p>
+<body style="font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0;">
+    <div class="container" style="max-width: 600px; margin: 0 auto; background-color: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+        <div class="header" style="text-align: center; padding: 20px; background-color: #428ace; color: white; border-radius: 8px 8px 0 0;">
+            <h1>Thanks for trying my demos!</h1>
+            <h3>- Emmanuel Acosta</h3>
+        </div>
+        <div class="content" style="padding: 20px; padding-bottom: 10px; text-align: left; color: #333333;">
+            <h1 style="font-size: 24px; margin-top: 0;">Hello, {{ user }}!</h1>
+            <p style="font-size: 16px; line-height: 1.5;">Thank you for visiting my site! I'm grateful that you've decided to explore the projects and demos I've put together. Your interest means a lot to me.</p>
+            <p style="font-size: 16px; line-height: 1.5;">If you're interested in working together, or just have any questions or feedback, please don't hesitate to <a href="mailto:3D.Acosta@gmail.com">contact me</a>.</p>
+            <div class="btnContainer" style="padding: 0; text-align: center; margin-top: 20px;">
+                <p style="font-size: 16px; line-height: 1.5;">
+                    Please visit again sometime.
+                </p>
+                <a href="{{ portfolio_link }}" class="btn" style="display: inline-block; padding: 10px 20px; font-size: 16px; color: white; background-color: #EF8275; border-radius: 5px; text-decoration: none;">Visit again</a>
+            </div>
+        </div>
+        <hr>
+        <div class="footer" style="text-align: center; color: #777777; font-size: 12px;">
+            <p>You're receiving this email because you associated your google email with my app for the first time.</p>
+            <p>You will not receive any further emails.</p>
+            <p>&copy; 2024 Emmanuel Acosta. All rights reserved.</p>
+        </div>
+    </div>
 </body>
 </html>
