--- a/portfolio_api/api/templates/email_template.html
+++ b/portfolio_api/api/templates/email_template.html
@@ -12,7 +12,7 @@
             <h3>- Emmanuel Acosta</h3>
         </div>
         <div class="content" style="padding: 20px; padding-bottom: 10px; text-align: left; color: #333333;">
-            <h1 style="font-size: 24px; margin-top: 0;">Hello, {{ user }}!</h1>
+            <h1 style="font-size: 24px; margin-top: 0;">Hello, {{ user.first_name }}!</h1>
             <p style="font-size: 16px; line-height: 1.5;">Thank you for visiting my site! I'm grateful that you've decided to explore the projects and demos I've put together. Your interest means a lot to me.</p>
             <p style="font-size: 16px; line-height: 1.5;">If you're interested in working together, or just have any questions or feedback, please don't hesitate to <a href="mailto:3D.Acosta@gmail.com">contact me</a>.</p>
             <div class="btnContainer" style="padding: 0; text-align: center; margin-top: 20px;">
