Updated plain text and html email content

--- a/portfolio_api/api/templates/email_template.html
+++ b/portfolio_api/api/templates/email_template.html
@@ -28,6 +28,7 @@
         </div>
         <hr>
         <div class="footer" style="text-align: center; color: #777777; font-size: 12px;">
+            <p>This is an automated message.</p>
             <p>You're receiving this email because you associated your google email with my app for the first time.</p>
             <p>You will not receive any further emails.</p>
             <p>&copy; 2024 Emmanuel Acosta. All rights reserved.</p>
