--- a/portfolio_api/api/templates/email_template.html
+++ b/portfolio_api/api/templates/email_template.html
@@ -13,13 +13,13 @@
                 <h1>Thanks for stopping by!</h1>                
             </div>
         </div>
-        <div class="content" style="padding: 20px; padding-bottom: 10px; text-align: left; color: #333333;">
+        <div class="content" style="padding: 50px 20px; text-align: left; color: #333333;">
             <h1 style="font-size: 24px; margin-top: 0;">Hi, {{ user }}!</h1>
             <p style="font-size: 16px; line-height: 1.5;">Thank you for taking the time to explore the projects and demos I've put together. It means a lot to me.</p>
             <p style="font-size: 16px; line-height: 1.5;">If you're interested in working together, or just have any questions or feedback, please don't hesitate to <a href="mailto:3D.Acosta@gmail.com">contact me</a>.</p>
             <p style="font-size: 16px; line-height: 1.5;">Have an awesome day!</p>
             <p style="font-size: 16px; line-height: 1.5;">- Emmanuel Acosta</p>
-            <div class="btnContainer" style="padding: 0; text-align: center; margin-top: 20px;">
+            <div class="btnContainer" style="padding: 0; text-align: center; margin-top: 30px;">
                 <p style="font-size: 16px; line-height: 1.5;">
                     Please visit again sometime.
                 </p>
