update: email styling tweaks

--- a/portfolio_api/api/templates/email_template.html
+++ b/portfolio_api/api/templates/email_template.html
@@ -7,9 +7,9 @@
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0;">
     <div class="container" style="max-width: 600px; margin: 0 auto; background-color: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
-        <div class="header" style="display: flex; justify-content: space-around; align-items: center; text-align: center; text-align: center; padding: 20px; background-color: #3e3e5d; color: whitesmoke; border-radius: 8px 8px 0 0;">
-            <div style="margin-top: auto; margin-bottom: auto; margin-left: auto; margin-right: 20px; flex: 1; max-width: 100px;">
-                <img style="max-width: 100%;" src="{{ email_logo_url }}" alt="Logo" name="Logo">
+        <div class="header" style="display: flex; align-items: center; text-align: center; text-align: center; padding: 20px; background-color: #3e3e5d; color: whitesmoke; border-radius: 8px 8px 0 0;">
+            <div style="margin-top: auto; margin-bottom: auto; margin-right: 20px; flex: 1; max-width: 100px;">
+                <img style="max-width: 100%; margin-right: auto;" src="{{ email_logo_url }}" alt="Logo" name="Logo">
             </div>
             <div style="margin: auto; flex: 4">
                 <h1>Thanks for stopping&nbsp;by!</h1>
